log
Thu 28 Mar 2024 02:45:06 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c60b798
Thu 28 Mar 2024 02:47:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
49ecdcb
Thu 28 Mar 2024 02:49:35 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:46:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   46 |   while (aux -> next != NULL)
      |   ^~~~~
list.c:48:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   48 |     return aux;
      |     ^~~~~~
list.c: In function ‘prevList’:
list.c:53:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘return’
   53 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f4ba280
Thu 28 Mar 2024 02:50:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:46:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   46 |   while (aux -> next != NULL)
      |   ^~~~~
list.c:48:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   48 |     return aux;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c08634e
Thu 28 Mar 2024 02:50:59 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d712ed2
Thu 28 Mar 2024 02:51:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7c8009d
Thu 28 Mar 2024 02:53:00 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:52:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   52 |   Node *aux = list->head;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
7f75049
Thu 28 Mar 2024 02:54:09 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:53:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   53 |   Node *aux = list->head;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
5120443
Thu 28 Mar 2024 02:54:33 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
655467b
Thu 28 Mar 2024 02:55:06 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
2956d0a
Thu 28 Mar 2024 02:55:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
57cdc3a
